# SPARC-atomSFE-PaperVersion

./: .gitignore  ChangeLog  LICENSE  README.md  __init__.py  example_usage.py  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  cookbook.md
psps/: README.md
src/: __init__.py  solver.py
src/data/: README.md  __init__.py  data_generation.py  data_loading.py  data_manager.py  data_processing.py  data_visualization.py
src/mesh/: builder.py  operators.py
src/pseudo/: non_local.py  read_pseudopotential.py
src/scf/: __init__.py  convergence.py  density.py  driver.py  eigensolver.py  energy.py  hamiltonian.py  mixer.py  response.py
src/utils/: occupation_states.py  periodic.py  solver_result.py
src/xc/: evaluator.py  functional_requirements.py  gga_pbe.py  hf.py  lda.py  meta_scan.py  rpa.py
src/xc/ml_xc/: base.py  calculator.py  nn_models.py  torch_backend.py
tests/: test_z92_lda.py  test_z92_schrodinger.py
tests/data/: README.md  build_summary_from_out.py  cleanup_dataset.py  generate_convergence_dataset.py  generate_dataset.py  keep_list.txt  summary_naming.py
tests/data/compare/: gga_pbe_accuracy_test_atompaw.py  gga_pbe_accuracy_test_atompaw_summary.txt  gga_pbe_accuracy_test_lehtola.py  gga_pbe_accuracy_test_lehtola_summary.txt  gga_pbe_accuracy_test_oncvpsp.py  gga_pbe_accuracy_test_oncvpsp_summary.txt  gga_pbe_convergence_test.py  gga_pbe_per_atom_convergence_test.py  hf_accuracy_test_charged_lehtola.py  hf_accuracy_test_charged_lehtola_summary.txt  hf_accuracy_test_neural_lehtola.py  hf_accuracy_test_neural_lehtola_summary.txt  hf_closed_shell_convergence_test.py  lda_pz_accuracy_test_featom.py  lda_pz_accuracy_test_featom_summary.txt  lda_pz_convergence_test_featom.py  lda_svwn_accuracy_test_featom.py  lda_svwn_accuracy_test_featom_summary.txt  lda_svwn_convergence_test.py  lda_svwn_convergence_test_featom.py  pseudo_accuracy_test_msparc.py  pseudo_accuracy_test_msparc_summary.txt  pseudo_pbe0_convergence_test.py  rpa_agreement_test_shubhang.py  rpa_agreement_test_shubhang_summary.txt  rscan_accuracy_test_atompaw.py  rscan_accuracy_test_atompaw_summary.txt
tests/data/reference/hf/: README.md  (+2 more)
tests/paper/: README.md
tests/paper/accuracy/: all_electron_accuracy.tex  all_electron_accuracy_standalone.tex
tests/paper/convergence/: all_electron_convergence.tex  all_electron_convergence_standalone.tex  pseudopotential_convergence.tex  pseudopotential_convergence_standalone.tex
tests/smoke/: test_solver_save_intermediate.py  test_solver_xc_functional.py
tests/unit/: test_mesh_builder.py  test_operators_derivative_matrix.py  test_pulay_mixing_trajectories.py
(+255 files in other folders)
